--- a/src/styles.css
+++ b/src/styles.css
@@ -26,3 +26,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.infoUser-padding-dialof .mat-dialog-container{
+    padding: 10px;
+  }
